##Text encoding: utf-8

2005-09-22  Jean Bréfort  <jean.brefort@normalesup.org>
	* Makefile.am: add mozilla-plugin subdir
	* configure.ac: ditto.
	* gcu/gtkperiodic.c: set text color to white when the background is dark.
	* gcu/object.cc: fixed one more Object::AddType bug.
	* glade/eltpage.glade: new glade file for periodic table application.
	* glade/gchemcalc.glade: removed deprecated item.
	* glade/gtkperiodic.glade: removed underscore tag to buttons.
	* mozilla-plugin/Makefile.am: new mozilla plugin.
	* mozilla-plugin/moz-plugin.c: ditto.
	* programs/Makefile.am: added gchemtable application
	* programs/gchemcalc.cc: fixed isotopic pattern average mass for
	high molecular mass formulas.
	* programs/gchemtable-elt.cc: new periodic table application.
	* programs/gchemtable-main.cc: ditto.
	* programs/gchemtable-unstable.desktop.in: ditto.

2005-09-17  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: changed version to 0.5.2
	* gcu/element.cc: changed some method names in gcu::IsotopicPattern.
	* gcu/formula.cc: ditto.
	* gcu/isotope.cc: ditto.
	* gcu/isotope.h: ditto.

2005-09-13  Jean Bréfort  <jean.brefort@normalesup.org>
	* gcu/element.cc: applied patch for #13273 (comiplation faied with gcc-4).
	* gcu/element.h: ditto.

2005-09-08  Jean Bréfort  <jean.brefort@normalesup.org>
	* Makefile.am: make distcheck should now work for non root users.
	* configure.ac: update openbabel-2 stuff.
	* gcu/gtkchem3dviewer.cc: ditto.

2005-09-07  Jean Bréfort  <jean.brefort@normalesup.org>
	* programs/gchemcalc.cc: add elemental composition.

2005-08-31  Jean Bréfort  <jean.brefort@normalesup.org>
	* gcu/isotope.cc: fixed a loop boundary bug.
	* programs/gchemcalc.cc: do not display peaks lower than 0.1 in
	isotopic patterns instead of 0.001.

2005-08-31  Jean Bréfort  <jean.brefort@normalesup.org>
	* database/isotopes.xml.in: fixed mass of 13C.
	* gcu/element.cc: enhanced isotopic pattern calculation.
	* gcu/isotope.cc: ditto.
	* gcu/isotope.h: ditto.