@@ -70,6 +70,7 @@ AM_CONDITIONAL(WITH_UPDATE_DESKTOP,test "$UPDATE_DESKTOP" = "yes")
 
 PKG_CHECK_MODULES(GCU, $REQUIREMENTS)
 
+GCU_CFLAGS="$GCU_CFLAGS -DG_DISABLE_DEPRECATED -DGTK_DISABLE_DEPRECATED -Wall"
 AC_SUBST(GCU_CFLAGS)
 AC_SUBST(GCU_LIBS)
 
