@@ -47,7 +47,7 @@ static void on_quit (GtkWidget *widget, void *data)
 static void on_about (GtkWidget *widget, void *data)
 {
 	char * authors[] = {"Jean Bréfort", NULL};
-	char * documentors[] = {NULL};
+//	char * documentors[] = {NULL};
 	char license[] = "This program is free software; you can redistribute it and/or\n" 
 		"modify it under the terms of the GNU General Public License as\n"
  		"published by the Free Software Foundation; either version 2 of the\n"
